# SubBrute

./: .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
src/: main.rs  tests.rs
wordlists/: common.txt
