[package]
name = "sub_brute"
version = "1.0.0"
edition = "2021"
authors = ["Varp0s"]
description = "A fast and efficient subdomain scanner built in Rust"
repository = "https://github.com/Varp0s/subbrute"
license = "MIT"
readme = "README.md"
keywords = ["security", "subdomain", "scanner", "dns"]
categories = ["command-line-utilities", "network-programming"]

[dependencies]
clap = { version = "4.0", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
trust-dns-resolver = "0.23"
reqwest = { version = "0.11", features = ["rustls-tls"] }
uuid = { version = "1", features = ["v4"] }
futures = "0.3"
serde_json = "1.0"
chrono = "0.4"
colored = "2.0"
indicatif = "0.17"
rand = "0.8"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true
